sleep-tracker v1.3 добавлены тесты, исправлено определение кол-ва сессий, исправлено определение типа сова.